// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`richness renders 0 1`] = `
Array [
  .c0 {
  richness: 0;
}

<div
    className="c0"
  />,
  .c0 {
  richness: 0;
}

<div
    className="c0"
  />,
  .c0 {
  richness: 0;
}

<div
    className="c0"
  />,
  .c0 {
  richness: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`richness renders function 1`] = `
Array [
  .c0 {
  richness: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  richness: has;
}

<div
    className="c0"
  />,
  .c0 {
  richness: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  richness: has;
}

<div
    className="c0"
  />,
]
`;

exports[`richness renders invalid theme path 1`] = `
Array [
  .c0 {
  richness: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  richness: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  richness: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  richness: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`richness renders negative number 1`] = `
Array [
  .c0 {
  richness: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  richness: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  richness: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  richness: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`richness renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    richness: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    richness: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    richness: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    richness: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    richness: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    richness: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    richness: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    richness: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    richness: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    richness: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    richness: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    richness: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    richness: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    richness: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    richness: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    richness: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`richness renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    richness: July;
  }
}

@media April {
  .c0 {
    richness: August;
  }
}

@media January {
  .c0 {
    richness: September;
  }
}

@media April {
  .c0 {
    richness: November;
  }
}

@media June {
  .c0 {
    richness: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    richness: July;
  }
}

@media April {
  .c0 {
    richness: August;
  }
}

@media January {
  .c0 {
    richness: September;
  }
}

@media April {
  .c0 {
    richness: November;
  }
}

@media June {
  .c0 {
    richness: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    richness: January;
  }
}

@media April {
  .c0 {
    richness: December;
  }
}

@media January {
  .c0 {
    richness: April;
  }
}

@media April {
  .c0 {
    richness: May;
  }
}

@media June {
  .c0 {
    richness: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    richness: January;
  }
}

@media April {
  .c0 {
    richness: December;
  }
}

@media January {
  .c0 {
    richness: April;
  }
}

@media April {
  .c0 {
    richness: May;
  }
}

@media June {
  .c0 {
    richness: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`richness renders postitive number 1`] = `
Array [
  .c0 {
  richness: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  richness: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  richness: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  richness: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`richness renders string 1`] = `
Array [
  .c0 {
  richness: July;
}

<div
    className="c0"
  />,
  .c0 {
  richness: July;
}

<div
    className="c0"
  />,
  .c0 {
  richness: June;
}

<div
    className="c0"
  />,
  .c0 {
  richness: June;
}

<div
    className="c0"
  />,
]
`;

exports[`richness renders valid theme path 1`] = `
Array [
  .c0 {
  richness: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  richness: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  richness: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  richness: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
